--- a/css/default.css
+++ b/css/default.css
@@ -1,12 +1,72 @@
 html {
+    --container: 300px;
+    --padding-container: 30px;
     box-sizing: border-box;
+    position: relative;
+    overflow-x: hidden;
 }
 
 *, *:before, *:after{
     box-sizing: inherit;
 }
 
-body{
+body {
     font-family: Rubik, sans-serif;
     font-family: Cousine, sans-serif;
+    min-width: 360px;
+    min-height: 100vh;
+    background-color: #444;
+    position: relative;
+    overflow-x: hidden;
+    color: #FFF;
+}
+
+img, svg {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+}
+
+button {
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+h1, h2, h3, p, figure {
+    margin: 0;
+}
+
+fieldset {
+    padding: 0;
+    bottom: 0;
+    margin: 0;
+}
+
+.visually-hidden {
+    position: fixed;
+    transform: scale(0);
+}
+
+.container {
+    max-width: calc(var(--container) + var(--padding-container) * 2);
+    padding: 0 var(--padding-container);
+    margin: 0 auto;
+}   
+
+@media (min-width:768px) {
+    
 }
